<resources>
    <string name="app_name">Dnd Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <string name="str">STR:</string>
    <string name="dex">DEX:</string>
    <string name="con">CON:</string>
    <string name="wis">WIS:</string>
    <string name="inte">INT:</string>
    <string name="cha">CHA:</string>
    <string name="ac">AC:</string>
    <string name="hp">HP:</string>
    <string name="speed">Speed:</string>
    <string name="charname">Charname</string>
    <string name="race">Race:</string>
    <string name="align">Align.:</string>
    <string name="backgr">Backgr.:</string>
    <string name="create_a_character">Create a character</string>
    <string name="hit_dice">Hit Dice:</string>
    <string name="character_sheet_app">Character Sheet App</string>
    <string name="server_client_id">1001328373583-pgdecbomg1c20n92o9vse3hqu9dalmub.apps.googleusercontent.com</string>
    <string name="logout">Logout</string>
    <string name="anonymous_name">Anonymous Name</string>
    <string name="view_sheets">View Sheets</string>
    <string name="add_sheet">Add Sheet</string>
    <string name="login">Login</string>
    <string name="lv">Lv.</string>

</resources>
