<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.SheetDetail" android:id="@+id/frameLayout3">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/CharDetailsLayoutId">

        <TextView
                android:text="@string/charname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CharacterNameID"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.498" android:textSize="30sp"/>
        <TextView
                android:text="@string/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Speed_id"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AC_Id" android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/HP"
                app:layout_constraintBottom_toTopOf="@+id/AC_Id" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/CharacterNameID" app:layout_constraintEnd_toEndOf="@+id/AC_Id"
                android:textSize="24sp" android:layout_marginBottom="8dp"/>
        <TextView
                android:text="@string/ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/AC_Id"
                app:layout_constraintTop_toBottomOf="@+id/HP"
                app:layout_constraintBottom_toTopOf="@+id/Speed_id" app:layout_constraintEnd_toEndOf="@+id/Speed_id"
                android:textSize="24sp" android:layout_marginBottom="8dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Speed_Value_Id"
                app:layout_constraintTop_toBottomOf="@+id/ACValueId" app:layout_constraintStart_toEndOf="@+id/Speed_id"
                android:layout_marginStart="8dp" android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/HP_Value_Id"
                app:layout_constraintTop_toTopOf="@+id/HP"
                app:layout_constraintBottom_toTopOf="@+id/ACValueId"
                app:layout_constraintStart_toStartOf="@+id/ACValueId"
                android:textSize="24sp" android:layout_marginBottom="8dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ACValueId"
                app:layout_constraintStart_toStartOf="@+id/Speed_Value_Id"
                app:layout_constraintTop_toBottomOf="@+id/HP_Value_Id"
                app:layout_constraintBottom_toTopOf="@+id/Speed_Value_Id" android:textSize="24sp"
                android:layout_marginBottom="8dp"/>
        <TextView
                android:text="@string/race"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RaceLabelId"
                android:textSize="24sp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/CharacterNameID"
                app:layout_constraintStart_toEndOf="@+id/HP_Value_Id"
                android:layout_marginStart="40dp"/>
        <TextView
                android:text="@string/backgr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/BackgroundLabelId"
                android:textSize="24sp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/RaceLabelId"
                app:layout_constraintEnd_toEndOf="@+id/RaceLabelId"/>
        <TextView
                android:text="@string/align"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/AlignmentLabelId" android:textSize="24sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/BackgroundLabelId"
                app:layout_constraintEnd_toEndOf="@+id/BackgroundLabelId"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RaceValueId" android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/RaceLabelId" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/RaceLabelId"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/AlignmentValueId" android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/AlignmentLabelId" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/BackgroundValueId"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/BackgroundValueId" android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/BackgroundLabelId" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/RaceValueId"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/CharDetailsLayoutId" app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.014" android:id="@+id/CharStatsLayoutId">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout3"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginEnd="64dp"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/StrValueId" android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/DexValueID"
                    app:layout_constraintTop_toTopOf="@+id/StrLabelId"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/DexValueID" android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/ConValueId"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/StrValueId"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ConValueId" android:textSize="24sp"
                    app:layout_constraintStart_toEndOf="@+id/ConLabelId"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/DexValueID"/>
            <TextView
                    android:text="@string/str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/StrLabelId" android:textSize="24sp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/DexLabelID" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/DexLabelID"/>
            <TextView
                    android:text="@string/dex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/DexLabelID" android:textSize="24sp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/ConLabelId"
                    app:layout_constraintStart_toStartOf="@+id/ConLabelId"/>
            <TextView
                    android:text="@string/con"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ConLabelId" android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="122dp"
                android:id="@+id/constraintLayout3"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/IntValueId" android:textSize="24sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/WisValueId"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/WisValueId" android:textSize="24sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/IntValueId"
                    app:layout_constraintStart_toStartOf="@+id/ChaValueId"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ChaValueId" android:textSize="24sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/WisValueId"
                    app:layout_constraintStart_toEndOf="@+id/ChaLabelId" android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/wis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/WisLabelID" android:textSize="24sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/IntLabelId"
                    app:layout_constraintStart_toStartOf="@+id/ChaLabelId"/>
            <TextView
                    android:text="@string/inte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/IntLabelId" android:textSize="24sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/WisLabelID"/>
            <TextView
                    android:text="@string/cha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ChaLabelId" android:textSize="24sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/WisLabelID"
                    app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/CharStatsLayoutId" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintVertical_bias="0.067">

        <TextView
                android:text="Lv."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LvLabelID" android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/ClassNameLabelId"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ClassNameLabelId"/>
        <TextView
                android:text="15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LvlValueId"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="@+id/LvLabelID" app:layout_constraintStart_toEndOf="@+id/LvLabelID"
                app:layout_constraintEnd_toStartOf="@+id/ClassNameLabelId"
                android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
        <TextView
                android:text="Paladin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ClassNameLabelId" android:textSize="30sp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.777"/>
        <TextView
                android:text="15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/HitDieAmoutLabelID" android:textSize="24sp"
                app:layout_constraintTop_toTopOf="@+id/HitDieDLabelID"
                app:layout_constraintBottom_toBottomOf="@+id/HitDieDLabelID" app:layout_constraintVertical_bias="0.0"
                app:layout_constraintEnd_toStartOf="@+id/HitDieDLabelID" android:layout_marginEnd="8dp"/>
        <TextView
                android:text="D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/HitDieDLabelID" android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/ClassNameLabelId"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/ClassNameLabelId"/>
        <TextView
                android:text="8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/HitDieValueID" app:layout_constraintStart_toEndOf="@+id/HitDieDLabelID"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/HitDieDLabelID" android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/HitDieDLabelID"
                app:layout_constraintVertical_bias="0.0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>